--- a/TransactionProcessing.ipynb
+++ b/TransactionProcessing.ipynb
@@ -50,8 +50,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3fe54786",
+   "metadata": {},
+   "source": [
+    "First, we need to assign the name or address of the excel file from which we want to read the transactions."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "3dd59f49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transactionsFileAddress = \"transactions.xlsx\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "3b035501",
    "metadata": {},
    "outputs": [
@@ -128,13 +146,13 @@
        "2                    0                39960  108286122.0  صحرا - اختیار معامله  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_excel(\"transactions.xlsx\", skiprows=2, header=None, \n",
+    "df = pd.read_excel(transactionsFileAddress, skiprows=2, header=None, \n",
     "                   names=[\"Date\", \"Detail\", \"NegativeTransaction\", \"PositiveTransaction\", \"Remain\", \"Branch\"])[:-1]\n",
     "\n",
     "df.head(3)"
@@ -150,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "64b3634a",
    "metadata": {},
    "outputs": [],
@@ -164,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1e447f49",
    "metadata": {},
    "outputs": [
@@ -230,7 +248,7 @@
        "21   NaN  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "ba78dda5",
    "metadata": {},
    "outputs": [
@@ -485,7 +503,7 @@
        "[175 rows x 10 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "68641c91",
    "metadata": {},
    "outputs": [],
@@ -530,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "fe1b9524",
    "metadata": {},
    "outputs": [
@@ -673,7 +691,7 @@
        "4   4794000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "3b77480c",
    "metadata": {},
    "outputs": [],
@@ -734,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "012e850d",
    "metadata": {},
    "outputs": [
@@ -804,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "16154773",
    "metadata": {},
    "outputs": [
@@ -825,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "762477cd",
    "metadata": {},
    "outputs": [
@@ -860,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "89981396",
    "metadata": {},
    "outputs": [],
@@ -935,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "774c1941",
    "metadata": {},
    "outputs": [
@@ -964,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "fe9a2749",
    "metadata": {},
    "outputs": [
@@ -974,24 +992,24 @@
      "text": [
       "SYSTEM_WGETRC = c:/progra~1/wget/etc/wgetrc\n",
       "syswgetrc = C:\\Program Files (x86)\\GnuWin32/etc/wgetrc\n",
-      "--2023-08-19 11:19:48--  http://cdn.tsetmc.com/api/Index/GetIndexB2History/32097828799138957\n",
-      "Resolving cdn.tsetmc.com... 94.182.184.228, 212.16.75.245, 46.102.143.218, ...\n",
+      "--2023-08-19 11:51:25--  http://cdn.tsetmc.com/api/Index/GetIndexB2History/32097828799138957\n",
+      "Resolving cdn.tsetmc.com... 94.182.184.228, 94.182.113.115, 46.102.143.218, ...\n",
       "Connecting to cdn.tsetmc.com|94.182.184.228|:80... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: unspecified [application/json]\n",
       "Saving to: `32097828799138957'\n",
       "\n",
-      "     0K .......... .......... .......... .......... .......... 1.69M\n",
-      "    50K .......... .......... .......... .......... .......... 1.07M\n",
-      "   100K .......... .......... .......... .......... .......... 1.09M\n",
-      "   150K .......... .......... .......... .......... .......... 1.30M\n",
-      "   200K .......... .......... .......... .......... .......... 1.77M\n",
-      "   250K .......... .......... .......... .......... .......... 1.63M\n",
-      "   300K .......... .......... .......... .......... .......... 2.66M\n",
-      "   350K .......... .......... .......... .......... .......... 1.66M\n",
-      "   400K .......... .......... .......... .......... ........   1.46M=0.3s\n",
+      "     0K .......... .......... .......... .......... ..........  290K\n",
+      "    50K .......... .......... .......... .......... ..........  592K\n",
+      "   100K .......... .......... .......... .......... .......... 4.06M\n",
+      "   150K .......... .......... .......... .......... ..........  733K\n",
+      "   200K .......... .......... .......... .......... ..........  976K\n",
+      "   250K .......... .......... .......... .......... .......... 4.40M\n",
+      "   300K .......... .......... .......... .......... .......... 4.77M\n",
+      "   350K .......... .......... .......... .......... .......... 3.70M\n",
+      "   400K .......... .......... .......... .......... ........   2.58M=0.4s\n",
       "\n",
-      "2023-08-19 11:19:48 (1.49 MB/s) - `32097828799138957' saved [459606]\n",
+      "2023-08-19 11:51:27 (1017 KB/s) - `32097828799138957' saved [459606]\n",
       "\n"
      ]
     }
@@ -1002,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "19b79651",
    "metadata": {},
    "outputs": [],
@@ -1034,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "6de9851f",
    "metadata": {},
    "outputs": [],
@@ -1044,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "bfc354d8",
    "metadata": {},
    "outputs": [],
@@ -1066,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "2bc456c3",
    "metadata": {},
    "outputs": [],
@@ -1079,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "0b08d872",
    "metadata": {},
    "outputs": [
@@ -1114,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "df7c0a49",
    "metadata": {},
    "outputs": [
@@ -1151,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "03c98cc0",
    "metadata": {},
    "outputs": [
@@ -1201,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "c45eae45",
    "metadata": {},
    "outputs": [],
@@ -1211,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "755e3b95",
    "metadata": {},
    "outputs": [],
@@ -1235,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "1dd4c0ee",
    "metadata": {},
    "outputs": [
