Restructure notebook folder

--- a/notebook/TransactionProcessing.ipynb
+++ b/notebook/TransactionProcessing.ipynb
@@ -10,19 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "93f12705",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: jdatetime in /home/amirs/.local/lib/python3.10/site-packages (4.1.1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install jdatetime"
    ]
@@ -64,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transactionsFileAddress = \"transactions.xlsx\""
+    "transactionsFileAddress = \"uploaded/transactions.xlsx\""
    ]
   },
   {
@@ -746,9 +737,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2023-08-28 14:19:05--  http://cdn.tsetmc.com/api/Index/GetIndexB2History/32097828799138957\n",
-      "Resolving cdn.tsetmc.com (cdn.tsetmc.com)... 212.16.75.245, 94.182.113.115, 46.102.143.218, ...\n",
-      "Connecting to cdn.tsetmc.com (cdn.tsetmc.com)|212.16.75.245|:80... connected.\n",
+      "--2023-08-29 10:25:20--  http://cdn.tsetmc.com/api/Index/GetIndexB2History/32097828799138957\n",
+      "Resolving cdn.tsetmc.com (cdn.tsetmc.com)... 46.102.143.218, 94.182.113.115, 212.16.75.245, ...\n",
+      "Connecting to cdn.tsetmc.com (cdn.tsetmc.com)|46.102.143.218|:80... connected.\n",
       "HTTP request sent, awaiting response... "
      ]
     },
@@ -760,9 +751,9 @@
       "Length: unspecified [application/json]\n",
       "Saving to: ‘32097828799138957’\n",
       "\n",
-      "32097828799138957       [        <=>         ] 449.75K   244KB/s    in 1.8s    \n",
+      "32097828799138957       [   <=>              ] 449.88K   738KB/s    in 0.6s    \n",
       "\n",
-      "2023-08-28 14:19:08 (244 KB/s) - ‘32097828799138957’ saved [460544]\n",
+      "2023-08-29 10:25:21 (738 KB/s) - ‘32097828799138957’ saved [460677]\n",
       "\n"
      ]
     }
@@ -1038,33 +1029,106 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "2db34953",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# CAPM"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "905fa743",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "WINDOW_SIZE = 30\n",
+    "STRIDE = 5"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "39f699aa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Calculating windows' data\n",
+    "all_dates = list(DailyData.keys())\n",
+    "date_index = 0\n",
+    "last_considered_from_profits_index = 0\n",
+    "windowProfits = {}\n",
+    "windowIndexProfits = {}\n",
+    "while True:\n",
+    "    date = all_dates[date_index]\n",
+    "    date_plus_window = getGregorianDate(date) + datetime.timedelta(days=WINDOW_SIZE)\n",
+    "    while last_considered_from_profits_index < len(all_dates) and getGregorianDate(all_dates[last_considered_from_profits_index]) < date_plus_window:\n",
+    "        last_considered_from_profits_index += 1\n",
+    "    end_date = all_dates[last_considered_from_profits_index - 1]\n",
+    "    windowProfits[date] = DailyData[end_date][\"Profit\"] - DailyData[date][\"Profit\"]\n",
+    "    windowIndexProfits[date] = market_index[end_date] / market_index[date] - 1.0\n",
+    "    date_index += STRIDE\n",
+    "    if last_considered_from_profits_index >= len(all_dates):\n",
+    "        break\n",
+    "windowProfitsCoefs = [windowProfits[i]/(InitialInvestment+DailyData[all_dates[last_considered_from_profits_index - 1]][\"Profit\"]) for i in windowProfits.keys()]\n",
+    "windowIndexCoefs = list(windowIndexProfits.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "a1fada16",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-0.03887968143247378,\n",
+       " -0.06948105893110268,\n",
+       " -0.07733589619027303,\n",
+       " -0.07066601431439468,\n",
+       " -0.040066052750355796]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "windowIndexCoefs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "1f5646ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.23289908764593192,\n",
+       " 0.2283803068680647,\n",
+       " 0.1681266440222766,\n",
+       " 0.48071549018981435,\n",
+       " 0.5230126541711928]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "windowProfitsCoefs"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1fada16",
+   "id": "fc608acd",
    "metadata": {},
    "outputs": [],
    "source": []
