Add input for initial investment, Add first chart to report page

--- a/notebook/TransactionProcessing.ipynb
+++ b/notebook/TransactionProcessing.ipynb
@@ -880,7 +880,7 @@
     "ax.xaxis.set_major_formatter(FuncFormatter(dayToJllDateFormatter))\n",
     "    \n",
     "ax.legend(loc=\"upper left\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
